konst/tests/misc_tests/destructure_rec_ui_tests/omit_field_array_err.stderr
error[E0527]: pattern requires 1 element but array has 4
 --> tests/misc_tests/destructure_rec_ui_tests/omit_field_array_err.rs:4:5
  |
4 |     konst::destructure_rec!{[bar] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected 4 elements
  |
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
