konst/tests/misc_tests/destructure_rec_ui_tests/omit_field_array_err.rs
type Array = [String; 4];

const fn to_bar(foo: Array) -> String {
    konst::destructure_rec!{[bar] = foo}
    bar
}

fn main(){}